# Profiler_Agentic

./: .dockerignore  .env.example  .gitignore  AGENT_PROMPTS.md  CURRENT_SYSTEM_DESIGN.md  DOCKER_QUICKSTART.md  DOCKER_SHARING.md  Dockerfile  Dockerfile.cli  Dockerfile.connector  Dockerfile.web  FILE_PROFILING_ARCHITECTURE.md  HYBRID_DEPLOYMENT.md  MCP_ARCHITECTURE_DESIGN.md  PRODUCTION_CHECKLIST.md  PRODUCTION_EXECUTIVE_SUMMARY.md  PRODUCTION_READINESS_AUDIT.md  QUICKSTART.md  README.Docker.md  README.md  SECURITY_IMPROVEMENTS_APPLIED.md  UNIFIED_AGENT_PROMPT.md  config.yaml  config.yml  docker-compose.yml  docker_entrypoint.py  info.txt  nginx.conf  parameters.md  pyproject.toml  requirements-connector.txt  requirements.txt  start-docker.bat  start-docker.sh  start-hybrid.bat  start-hybrid.sh  start-multi.bat  start-multi.sh  start.bat  start.sh  (+3 more)
.github/workflows/: ci-gates.yml  live-provider-gate.yml
docs/: ARCHITECTURE_AUDIT.md  DEPLOYMENT_READINESS.md  DOCKER_QUICKSTART.md  DOCKER_SHARING.md  DUCKDB_PARALLEL_FIX.md  FILE_PROFILING_ARCHITECTURE.md  HYBRID_DEPLOYMENT.md  KIVOR_MINIO_CONFIG.md  MCP_ARCHITECTURE_DESIGN.md  MINIO_INTEGRATION.md  PRODUCTION_ACTION_PLAN.md  README.Docker.md  README.md  SYSTEM_ARCHITECTURE_MASTER.md  UNIFIED_AGENT_PROMPT.md  parameters.md
file_profiler/: __init__.py  __main__.py  connector_mcp_server.py  main.py  mcp_server.py
file_profiler/agent/: __init__.py  __main__.py  chatbot.py  cli.py  embedding_factory.py  enrichment.py  enrichment_mapreduce.py  enrichment_progress.py  erd_wait.py  graph.py  job_manager.py  llm_factory.py  mcp_endpoints.py  planner.py  progress.py  session_manager.py  state.py  system_prompt.py  system_prompt_optimized.py  vector_store.py  web_server.py
frontend/: _preview.html  app.js  index.html  style.css
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: load_wwi_to_postgres.py
tests/: conftest.py  test_agent.py  test_build_graph.py  test_chart_generator.py  test_chatbot_compaction.py  test_chatbot_e2e.py  test_chatbot_progress_e2e.py  test_classification.py  test_column_profiler.py  test_config_env.py  test_connector_mcp_server.py  test_connectors.py  test_csv_engine.py  test_deployment_smoke.py  test_duckdb_sampler.py  test_e2e_run.py  test_enrichment_e2e.py  test_enrichment_mapreduce.py  test_env_defaults.py  test_er_improvements.py  test_erd_wait_ws.py  test_excel_engine.py  test_file_resolver.py  test_intake.py  test_json_engine.py  test_langsmith_observability.py  test_llm_factory.py  test_main.py  test_mcp_compat.py  test_mcp_connect.py  test_mcp_endpoints.py  test_mcp_server.py  test_minio_connector.py  test_minio_multi_file.py  test_output.py  test_parquet_engine.py  test_pg.py  test_progress.py  test_quality_checker.py  test_relationship_detector.py  (+3 more)
(+52 files in other folders)
